--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
           echo GITHUB_REF - $ref
           echo ${GITHUB_PACKAGE_TOKEN} | docker login ghcr.io -u ${USERNAME} --password-stdin
           docker buildx build --push --platform linux/amd64,linux/arm/v7,linux/arm64 \
-              -t ghcr.io/${USERNAME}/reproxy:${ref} -t ghcr.io/${USERNAME}/ping:latest .
+              -t ghcr.io/${USERNAME}/ping:${ref} -t ghcr.io/${USERNAME}/ping:latest .
